# azuraaye3

./: AugmanErrorHandler.kt  README.md  crash.txt
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/java/com/azura/azuratime/db/: AppDatabase.kt  CheckInRecord.kt  CheckInRecordDao.kt
app/src/main/java/com/azura/azuratime/ml/: FaceAnalyzer.kt
app/src/main/java/com/azura/azuratime/model/: ProcessResult.kt
app/src/main/java/com/azura/azuratime/navigation/: NavGraph.kt
app/src/main/java/com/azura/azuratime/scanner/: FaceScanner.kt
app/src/main/java/com/azura/azuratime/ui/: MainScreen.kt
app/src/main/java/com/azura/azuratime/util/: InsertTestCheckInRecord.kt
app/src/main/java/com/azura/azuratime/utils/: ExportUtils.kt
app/src/main/java/com/azura/azuratime/viewmodel/: CheckInViewModel.kt  RegisterViewModel.kt
app/src/main/java/com/example/crashcourse/: MainActivity.kt
app/src/main/java/com/example/crashcourse/camera/: CameraPreview.kt  CameraXSetup.kt  ImageProxyExtensions.kt
sample_data/: README.md  STEP3_VERIFICATION.md  UI_IMPROVEMENTS.md  students_diverse_faces.csv  students_mixed_data.csv  students_professional_faces.csv  students_test_faces.csv  students_with_photos1.csv
unused_backup/: CameraCaptureScreen.kt  CameraSwitchButton.kt  CameraUtils.kt  ManualFaceBoxOverlay.kt  ManualFaceDetectionAnalyzer.kt
unused_backup/ui/components/: EditUserPhotoCaptureScreen.kt  FaceManualCaptureScreen.kt  PhotoCaptureScreen.kt  RealPhotoCaptureManager.kt  RealPhotoCaptureScreen.kt
(+44 files in other folders)
